# duckdb-etl-serverless

./: README.md  duckdb_sql.sql  etl.py  etl_orders.py  generate_customer_dimension.py  generate_orders_data.py  incremental.py  measure_read.py  pyproject.toml
data/: dim_customer.parquet  meta.json
data/csv_raw/: orders_2025-10-26.csv  orders_2025-10-28.csv  orders_2025-10-29.csv  orders_2025-10-30.csv  orders_2025-10-31.csv
data/features/customer_daily/ds=2025-10-25/: data_0.parquet
data/features/customer_daily/ds=2025-10-29/: data_0.parquet
data/raw/: orders_2025-10-03.parquet  orders_2025-10-05.parquet  orders_2025-10-27.parquet  orders_2025-10-29.parquet  orders_2025-10-31.parquet
data/raw_parquet/Year=2025/: data_0.parquet
duckdb-polars-pipeline/: README.md  generate_data.py  main.py  pyproject.toml
local-etl-using-duckdb/: gen_data.py  main.py  pyproject.toml  requirements.txt
serverless-etl-on-a-laptop/: README.md  duckdb_sql.sql  incremental.py  measure_read.py
serverless-etl-on-a-laptop/data/: dim_customer.parquet  meta.json
serverless-etl-on-a-laptop/data/csv_raw/: orders_2025-10-25.csv  orders_2025-10-27.csv
serverless-etl-on-a-laptop/data/features/customer_daily/ds=2025-10-01/: data_0.parquet
serverless-etl-on-a-laptop/data/raw/: orders_2025-10-01.parquet  orders_2025-10-02.parquet  orders_2025-10-04.parquet  orders_2025-10-25.parquet  orders_2025-10-26.parquet  orders_2025-10-28.parquet  orders_2025-10-30.parquet
serverless-etl-on-a-laptop/data/raw_parquet/Year=2015/: data_0.parquet
(+5 files in other folders)
